--- a/app/templates/features/interlocutoreCrimes.html
+++ b/app/templates/features/interlocutoreCrimes.html
@@ -14,7 +14,7 @@
       </div>
     </div>
     <div id="no-combination-message" style="display: none;">
-      <h5 style="text-align:left">Nessuna combinazione trovata. </h5>
+      <h5 style="text-align:left">Nessun risultato ottenuto. </h5>
     </div>
     <div class="accordionContainer p-2 bd-highlight">
       <div class="combined-filter-box">
